@@ -44,30 +44,27 @@
 package org.eclipse.jgit.util;
 
 import java.io.BufferedReader;
-import java.io.ByteArrayInputStream;
+import java.io.BufferedWriter;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
+import java.io.OutputStreamWriter;
 import java.io.PrintStream;
-import java.nio.charset.Charset;
+import java.io.PrintWriter;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.text.MessageFormat;
 import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Objects;
+import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReference;
 
-import org.eclipse.jgit.annotations.Nullable;
 import org.eclipse.jgit.api.errors.JGitInternalException;
-import org.eclipse.jgit.errors.CommandFailedException;
+import org.eclipse.jgit.errors.SymlinksNotSupportedException;
 import org.eclipse.jgit.internal.JGitText;
 import org.eclipse.jgit.lib.Constants;
 import org.eclipse.jgit.lib.Repository;
@@ -111,59 +108,12 @@ public abstract class FS {
 		}
 	}
 
-	/**
-	 * Result of an executed process. The caller is responsible to close the
-	 * contained {@link TemporaryBuffer}s
-	 *
-	 * @since 4.2
-	 */
-	public static class ExecutionResult {
-		private TemporaryBuffer stdout;
-
-		private TemporaryBuffer stderr;
-
-		private int rc;
-
-		/**
-		 * @param stdout
-		 * @param stderr
-		 * @param rc
-		 */
-		public ExecutionResult(TemporaryBuffer stdout, TemporaryBuffer stderr,
-				int rc) {
-			this.stdout = stdout;
-			this.stderr = stderr;
-			this.rc = rc;
-		}
-
-		/**
-		 * @return buffered standard output stream
-		 */
-		public TemporaryBuffer getStdout() {
-			return stdout;
-		}
-
-		/**
-		 * @return buffered standard error stream
-		 */
-		public TemporaryBuffer getStderr() {
-			return stderr;
-		}
-
-		/**
-		 * @return the return code of the process
-		 */
-		public int getRc() {
-			return rc;
-		}
-	}
-
 	private final static Logger LOG = LoggerFactory.getLogger(FS.class);
 
 	/** The auto-detected implementation selected for this operating system and JRE. */
 	public static final FS DETECTED = detect();
 
-	private volatile static FSFactory factory;
+	private static FSFactory factory;
 
 	/**
 	 * Auto-detect the appropriate file system abstraction.
@@ -204,7 +154,7 @@ public abstract class FS {
 
 	private volatile Holder<File> userHome;
 
-	private volatile Holder<File> gitSystemConfig;
+	private volatile Holder<File> gitPrefix;
 
 	/**
 	 * Constructs a file system abstraction.
@@ -221,7 +171,7 @@ public abstract class FS {
 	 */
 	protected FS(FS src) {
 		userHome = src.userHome;
-		gitSystemConfig = src.gitSystemConfig;
+		gitPrefix = src.gitPrefix;
 	}
 
 	/** @return a new instance of the same type of FS. */
@@ -295,7 +245,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public long lastModified(File f) throws IOException {
-		return FileUtils.lastModified(f);
+		return f.lastModified();
 	}
 
 	/**
@@ -308,7 +258,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public void setLastModified(File f, long time) throws IOException {
-		FileUtils.setLastModified(f, time);
+		f.setLastModified(time);
 	}
 
 	/**
@@ -321,7 +271,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public long length(File path) throws IOException {
-		return FileUtils.getLength(path);
+		return path.length();
 	}
 
 	/**
@@ -333,7 +283,9 @@ public abstract class FS {
 	 * @since 3.3
 	 */
 	public void delete(File f) throws IOException {
-		FileUtils.delete(f);
+		if (!f.delete())
+			throw new IOException(MessageFormat.format(
+					JGitText.get().deleteFileFailed, f.getAbsolutePath()));
 	}
 
 	/**
@@ -375,7 +327,7 @@ public abstract class FS {
 	public File userHome() {
 		Holder<File> p = userHome;
 		if (p == null) {
-			p = new Holder<>(userHomeImpl());
+			p = new Holder<File>(userHomeImpl());
 			userHome = p;
 		}
 		return p.value;
@@ -390,7 +342,7 @@ public abstract class FS {
 	 * @return {@code this}.
 	 */
 	public FS setUserHome(File path) {
-		userHome = new Holder<>(path);
+		userHome = new Holder<File>(path);
 		return this;
 	}
 
@@ -409,7 +361,6 @@ public abstract class FS {
 	protected File userHomeImpl() {
 		final String home = AccessController
 				.doPrivileged(new PrivilegedAction<String>() {
-					@Override
 					public String run() {
 						return System.getProperty("user.home"); //$NON-NLS-1$
 					}
@@ -452,95 +403,85 @@ public abstract class FS {
 	 * @param command
 	 *            as component array
 	 * @param encoding
-	 *            to be used to parse the command's output
-	 * @return the one-line output of the command or {@code null} if there is
-	 *         none
-	 * @throws CommandFailedException
-	 *             thrown when the command failed (return code was non-zero)
+	 * @return the one-line output of the command
 	 */
-	@Nullable
-	protected static String readPipe(File dir, String[] command,
-			String encoding) throws CommandFailedException {
-		return readPipe(dir, command, encoding, null);
-	}
-
-	/**
-	 * Execute a command and return a single line of output as a String
-	 *
-	 * @param dir
-	 *            Working directory for the command
-	 * @param command
-	 *            as component array
-	 * @param encoding
-	 *            to be used to parse the command's output
-	 * @param env
-	 *            Map of environment variables to be merged with those of the
-	 *            current process
-	 * @return the one-line output of the command or {@code null} if there is
-	 *         none
-	 * @throws CommandFailedException
-	 *             thrown when the command failed (return code was non-zero)
-	 * @since 4.0
-	 */
-	@Nullable
-	protected static String readPipe(File dir, String[] command,
-			String encoding, Map<String, String> env)
-			throws CommandFailedException {
+	protected static String readPipe(File dir, String[] command, String encoding) {
 		final boolean debug = LOG.isDebugEnabled();
 		try {
 			if (debug) {
 				LOG.debug("readpipe " + Arrays.asList(command) + "," //$NON-NLS-1$ //$NON-NLS-2$
 						+ dir);
 			}
-			ProcessBuilder pb = new ProcessBuilder(command);
-			pb.directory(dir);
-			if (env != null) {
-				pb.environment().putAll(env);
-			}
-			Process p;
-			try {
-				p = pb.start();
-			} catch (IOException e) {
-				// Process failed to start
-				throw new CommandFailedException(-1, e.getMessage(), e);
-			}
+			final Process p = Runtime.getRuntime().exec(command, null, dir);
+			final BufferedReader lineRead = new BufferedReader(
+					new InputStreamReader(p.getInputStream(), encoding));
 			p.getOutputStream().close();
-			GobblerThread gobbler = new GobblerThread(p, command, dir);
+			final AtomicBoolean gooblerFail = new AtomicBoolean(false);
+			Thread gobbler = new Thread() {
+				public void run() {
+					InputStream is = p.getErrorStream();
+					try {
+						int ch;
+						if (debug)
+							while ((ch = is.read()) != -1)
+								System.err.print((char) ch);
+						else
+							while (is.read() != -1) {
+								// ignore
+							}
+					} catch (IOException e) {
+						// Just print on stderr for debugging
+						if (debug)
+							e.printStackTrace(System.err);
+						gooblerFail.set(true);
+					}
+					try {
+						is.close();
+					} catch (IOException e) {
+						// Just print on stderr for debugging
+						if (debug) {
+							LOG.debug("Caught exception in gobbler thread", e); //$NON-NLS-1$
+						}
+						gooblerFail.set(true);
+					}
+				}
+			};
 			gobbler.start();
 			String r = null;
-			try (BufferedReader lineRead = new BufferedReader(
-					new InputStreamReader(p.getInputStream(), encoding))) {
+			try {
 				r = lineRead.readLine();
 				if (debug) {
 					LOG.debug("readpipe may return '" + r + "'"); //$NON-NLS-1$ //$NON-NLS-2$
-					LOG.debug("remaining output:\n"); //$NON-NLS-1$
-					String l;
-					while ((l = lineRead.readLine()) != null) {
+					LOG.debug("(ignoring remaing output:"); //$NON-NLS-1$
+				}
+				String l;
+				while ((l = lineRead.readLine()) != null) {
+					if (debug) {
 						LOG.debug(l);
 					}
 				}
+			} finally {
+				p.getErrorStream().close();
+				lineRead.close();
 			}
 
 			for (;;) {
 				try {
 					int rc = p.waitFor();
 					gobbler.join();
-					if (rc == 0 && !gobbler.fail.get()) {
+					if (rc == 0 && r != null && r.length() > 0
+							&& !gooblerFail.get())
 						return r;
-					} else {
-						if (debug) {
-							LOG.debug("readpipe rc=" + rc); //$NON-NLS-1$
-						}
-						throw new CommandFailedException(rc,
-								gobbler.errorMessage.get(),
-								gobbler.exception.get());
+					if (debug) {
+						LOG.debug("readpipe rc=" + rc); //$NON-NLS-1$
 					}
+					break;
 				} catch (InterruptedException ie) {
 					// Stop bothering me, I have a zombie to reap.
 				}
 			}
 		} catch (IOException e) {
-			LOG.error("Caught exception in FS.readPipe()", e); //$NON-NLS-1$
+			LOG.debug("Caught exception in FS.readPipe()", e); //$NON-NLS-1$
 		}
 		if (debug) {
 			LOG.debug("readpipe returns null"); //$NON-NLS-1$
@@ -548,145 +489,34 @@ public abstract class FS {
 		return null;
 	}
 
-	private static class GobblerThread extends Thread {
-		private final Process p;
-		private final String desc;
-		private final String dir;
-		final AtomicBoolean fail = new AtomicBoolean();
-		final AtomicReference<String> errorMessage = new AtomicReference<>();
-		final AtomicReference<Throwable> exception = new AtomicReference<>();
-
-		GobblerThread(Process p, String[] command, File dir) {
-			this.p = p;
-			this.desc = Arrays.toString(command);
-			this.dir = Objects.toString(dir);
+	/** @return the $prefix directory C Git would use. */
+	public File gitPrefix() {
+		Holder<File> p = gitPrefix;
+		if (p == null) {
+			String overrideGitPrefix = SystemReader.getInstance().getProperty(
+					"jgit.gitprefix"); //$NON-NLS-1$
+			if (overrideGitPrefix != null)
+				p = new Holder<File>(new File(overrideGitPrefix));
+			else
+				p = new Holder<File>(discoverGitPrefix());
+			gitPrefix = p;
 		}
-
-		@Override
-		public void run() {
-			StringBuilder err = new StringBuilder();
-			try (InputStream is = p.getErrorStream()) {
-				int ch;
-				while ((ch = is.read()) != -1) {
-					err.append((char) ch);
-				}
-			} catch (IOException e) {
-				if (p.exitValue() != 0) {
-					setError(e, e.getMessage());
-					fail.set(true);
-				} else {
-					// ignore. command terminated faster and stream was just closed
-				}
-			} finally {
-				if (err.length() > 0) {
-					setError(null, err.toString());
-					if (p.exitValue() != 0) {
-						fail.set(true);
-					}
-				}
-			}
-		}
-
-		private void setError(IOException e, String message) {
-			exception.set(e);
-			errorMessage.set(MessageFormat.format(
-					JGitText.get().exceptionCaughtDuringExcecutionOfCommand,
-					desc, dir, Integer.valueOf(p.exitValue()), message));
-		}
+		return p.value;
 	}
 
-	/**
-	 * @return the path to the Git executable or {@code null} if it cannot be
-	 *         determined.
-	 * @since 4.0
-	 */
-	protected abstract File discoverGitExe();
+	/** @return the $prefix directory C Git would use. */
+	protected abstract File discoverGitPrefix();
 
 	/**
-	 * @return the path to the system-wide Git configuration file or
-	 *         {@code null} if it cannot be determined.
-	 * @since 4.0
-	 */
-	protected File discoverGitSystemConfig() {
-		File gitExe = discoverGitExe();
-		if (gitExe == null) {
-			return null;
-		}
-
-		// Bug 480782: Check if the discovered git executable is JGit CLI
-		String v;
-		try {
-			v = readPipe(gitExe.getParentFile(),
-				new String[] { "git", "--version" }, //$NON-NLS-1$ //$NON-NLS-2$
-				Charset.defaultCharset().name());
-		} catch (CommandFailedException e) {
-			LOG.warn(e.getMessage());
-			return null;
-		}
-		if (StringUtils.isEmptyOrNull(v)
-				|| (v != null && v.startsWith("jgit"))) { //$NON-NLS-1$
-			return null;
-		}
-
-		// Trick Git into printing the path to the config file by using "echo"
-		// as the editor.
-		Map<String, String> env = new HashMap<>();
-		env.put("GIT_EDITOR", "echo"); //$NON-NLS-1$ //$NON-NLS-2$
-
-		String w;
-		try {
-			w = readPipe(gitExe.getParentFile(),
-				new String[] { "git", "config", "--system", "--edit" }, //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
-				Charset.defaultCharset().name(), env);
-		} catch (CommandFailedException e) {
-			LOG.warn(e.getMessage());
-			return null;
-		}
-		if (StringUtils.isEmptyOrNull(w)) {
-			return null;
-		}
-
-		return new File(w);
-	}
-
-	/**
-	 * @return the currently used path to the system-wide Git configuration
-	 *         file or {@code null} if none has been set.
-	 * @since 4.0
-	 */
-	public File getGitSystemConfig() {
-		if (gitSystemConfig == null) {
-			gitSystemConfig = new Holder<>(discoverGitSystemConfig());
-		}
-		return gitSystemConfig.value;
-	}
-
-	/**
-	 * Set the path to the system-wide Git configuration file to use.
+	 * Set the $prefix directory C Git uses.
 	 *
-	 * @param configFile
-	 *            the path to the config file.
+	 * @param path
+	 *            the directory. Null if C Git is not installed.
 	 * @return {@code this}
-	 * @since 4.0
 	 */
-	public FS setGitSystemConfig(File configFile) {
-		gitSystemConfig = new Holder<>(configFile);
+	public FS setGitPrefix(File path) {
+		gitPrefix = new Holder<File>(path);
 		return this;
-	}
-
-	/**
-	 * @param grandchild
-	 * @return the parent directory of this file's parent directory or
-	 *         {@code null} in case there's no grandparent directory
-	 * @since 4.0
-	 */
-	protected static File resolveGrandparentFile(File grandchild) {
-		if (grandchild != null) {
-			File parent = grandchild.getParentFile();
-			if (parent != null)
-				return parent.getParentFile();
-		}
-		return null;
 	}
 
 	/**
@@ -698,7 +528,8 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public String readSymLink(File path) throws IOException {
-		return FileUtils.readSymLink(path);
+		throw new SymlinksNotSupportedException(
+				JGitText.get().errorSymlinksNotSupported);
 	}
 
 	/**
@@ -708,7 +539,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean isSymLink(File path) throws IOException {
-		return FileUtils.isSymlink(path);
+		return false;
 	}
 
 	/**
@@ -720,7 +551,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean exists(File path) {
-		return FileUtils.exists(path);
+		return path.exists();
 	}
 
 	/**
@@ -732,7 +563,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean isDirectory(File path) {
-		return FileUtils.isDirectory(path);
+		return path.isDirectory();
 	}
 
 	/**
@@ -744,7 +575,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean isFile(File path) {
-		return FileUtils.isFile(path);
+		return path.isFile();
 	}
 
 	/**
@@ -755,7 +586,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean isHidden(File path) throws IOException {
-		return FileUtils.isHidden(path);
+		return path.isHidden();
 	}
 
 	/**
@@ -767,7 +598,9 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public void setHidden(File path, boolean hidden) throws IOException {
-		FileUtils.setHidden(path, hidden);
+		if (!path.getName().startsWith(".")) //$NON-NLS-1$
+			throw new IllegalArgumentException(
+					"Hiding only allowed for names that start with a period");
 	}
 
 	/**
@@ -779,11 +612,12 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public void createSymLink(File path, String target) throws IOException {
-		FileUtils.createSymLink(path, target);
+		throw new SymlinksNotSupportedException(
+				JGitText.get().errorSymlinksNotSupported);
 	}
 
 	/**
-	 * See {@link FileUtils#relativizePath(String, String, String, boolean)}.
+	 * See {@link FileUtils#relativize(String, String)}.
 	 *
 	 * @param base
 	 *            The path against which <code>other</code> should be
@@ -792,11 +626,11 @@ public abstract class FS {
 	 *            The path that will be made relative to <code>base</code>.
 	 * @return A relative path that, when resolved against <code>base</code>,
 	 *         will yield the original <code>other</code>.
-	 * @see FileUtils#relativizePath(String, String, String, boolean)
+	 * @see FileUtils#relativize(String, String)
 	 * @since 3.7
 	 */
 	public String relativize(String base, String other) {
-		return FileUtils.relativizePath(base, other, File.separator, this.isCaseSensitive());
+		return FileUtils.relativize(base, other);
 	}
 
 	/**
@@ -937,10 +771,7 @@ public abstract class FS {
 	 * @since 4.0
 	 */
 	public File findHook(Repository repository, final String hookName) {
-		File gitDir = repository.getDirectory();
-		if (gitDir == null)
-			return null;
-		final File hookFile = new File(new File(gitDir,
+		final File hookFile = new File(new File(repository.getDirectory(),
 				Constants.HOOKS), hookName);
 		return hookFile.isFile() ? hookFile : null;
 	}
@@ -949,91 +780,51 @@ public abstract class FS {
 	 * Runs the given process until termination, clearing its stdout and stderr
 	 * streams on-the-fly.
 	 *
-	 * @param processBuilder
-	 *            The process builder configured for this process.
+	 * @param hookProcessBuilder
+	 *            The process builder configured for this hook.
 	 * @param outRedirect
-	 *            A OutputStream on which to redirect the processes stdout. Can
-	 *            be <code>null</code>, in which case the processes standard
-	 *            output will be lost.
+	 *            A print stream on which to redirect the hook's stdout. Can be
+	 *            <code>null</code>, in which case the hook's standard output
+	 *            will be lost.
 	 * @param errRedirect
-	 *            A OutputStream on which to redirect the processes stderr. Can
-	 *            be <code>null</code>, in which case the processes standard
-	 *            error will be lost.
+	 *            A print stream on which to redirect the hook's stderr. Can be
+	 *            <code>null</code>, in which case the hook's standard error
+	 *            will be lost.
 	 * @param stdinArgs
 	 *            A string to pass on to the standard input of the hook. Can be
 	 *            <code>null</code>.
-	 * @return the exit value of this process.
+	 * @return the exit value of this hook.
 	 * @throws IOException
-	 *             if an I/O error occurs while executing this process.
+	 *             if an I/O error occurs while executing this hook.
 	 * @throws InterruptedException
 	 *             if the current thread is interrupted while waiting for the
 	 *             process to end.
-	 * @since 4.2
+	 * @since 3.7
 	 */
-	public int runProcess(ProcessBuilder processBuilder,
+	protected int runProcess(ProcessBuilder hookProcessBuilder,
 			OutputStream outRedirect, OutputStream errRedirect, String stdinArgs)
 			throws IOException, InterruptedException {
-		InputStream in = (stdinArgs == null) ? null : new ByteArrayInputStream(
-				stdinArgs.getBytes(Constants.CHARACTER_ENCODING));
-		return runProcess(processBuilder, outRedirect, errRedirect, in);
-	}
-
-	/**
-	 * Runs the given process until termination, clearing its stdout and stderr
-	 * streams on-the-fly.
-	 *
-	 * @param processBuilder
-	 *            The process builder configured for this process.
-	 * @param outRedirect
-	 *            An OutputStream on which to redirect the processes stdout. Can
-	 *            be <code>null</code>, in which case the processes standard
-	 *            output will be lost.
-	 * @param errRedirect
-	 *            An OutputStream on which to redirect the processes stderr. Can
-	 *            be <code>null</code>, in which case the processes standard
-	 *            error will be lost.
-	 * @param inRedirect
-	 *            An InputStream from which to redirect the processes stdin. Can
-	 *            be <code>null</code>, in which case the process doesn't get
-	 *            any data over stdin. It is assumed that the whole InputStream
-	 *            will be consumed by the process. The method will close the
-	 *            inputstream after all bytes are read.
-	 * @return the return code of this process.
-	 * @throws IOException
-	 *             if an I/O error occurs while executing this process.
-	 * @throws InterruptedException
-	 *             if the current thread is interrupted while waiting for the
-	 *             process to end.
-	 * @since 4.2
-	 */
-	public int runProcess(ProcessBuilder processBuilder,
-			OutputStream outRedirect, OutputStream errRedirect,
-			InputStream inRedirect) throws IOException,
-			InterruptedException {
 		final ExecutorService executor = Executors.newFixedThreadPool(2);
 		Process process = null;
 		// We'll record the first I/O exception that occurs, but keep on trying
 		// to dispose of our open streams and file handles
 		IOException ioException = null;
 		try {
-			process = processBuilder.start();
-			executor.execute(
-					new StreamGobbler(process.getErrorStream(), errRedirect));
-			executor.execute(
-					new StreamGobbler(process.getInputStream(), outRedirect));
-			OutputStream outputStream = process.getOutputStream();
-			if (inRedirect != null) {
-				new StreamGobbler(inRedirect, outputStream).copy();
-			}
-			try {
-				outputStream.close();
-			} catch (IOException e) {
-				// When the process exits before consuming the input, the OutputStream
-				// is replaced with the null output stream. This null output stream
-				// throws IOException for all write calls. When StreamGobbler fails to
-				// flush the buffer because of this, this close call tries to flush it
-				// again. This causes another IOException. Since we ignore the
-				// IOException in StreamGobbler, we also ignore the exception here.
+			process = hookProcessBuilder.start();
+			final Callable<Void> errorGobbler = new StreamGobbler(
+					process.getErrorStream(), errRedirect);
+			final Callable<Void> outputGobbler = new StreamGobbler(
+					process.getInputStream(), outRedirect);
+			executor.submit(errorGobbler);
+			executor.submit(outputGobbler);
+			if (stdinArgs != null) {
+				final PrintWriter stdinWriter = new PrintWriter(
+						process.getOutputStream());
+				stdinWriter.print(stdinArgs);
+				stdinWriter.flush();
+				// We are done with this hook's input. Explicitly close its
+				// stdin now to kick off any blocking read the hook might have.
+				stdinWriter.close();
 			}
 			return process.waitFor();
 		} catch (IOException e) {
@@ -1053,9 +844,6 @@ public abstract class FS {
 				// A process doesn't clean its own resources even when destroyed
 				// Explicitly try and close all three streams, preserving the
 				// outer I/O exception if any.
-				if (inRedirect != null) {
-					inRedirect.close();
-				}
 				try {
 					process.getErrorStream().close();
 				} catch (IOException e) {
@@ -1096,10 +884,10 @@ public abstract class FS {
 		pool.shutdown(); // Disable new tasks from being submitted
 		try {
 			// Wait a while for existing tasks to terminate
-			if (!pool.awaitTermination(60, TimeUnit.SECONDS)) {
+			if (!pool.awaitTermination(5, TimeUnit.SECONDS)) {
 				pool.shutdownNow(); // Cancel currently executing tasks
 				// Wait a while for tasks to respond to being canceled
-				if (!pool.awaitTermination(60, TimeUnit.SECONDS))
+				if (!pool.awaitTermination(5, TimeUnit.SECONDS))
 					hasShutdown = false;
 			}
 		} catch (InterruptedException ie) {
@@ -1113,7 +901,7 @@ public abstract class FS {
 	}
 
 	/**
-	 * Initialize a ProcessBuilder to run a command using the system shell.
+	 * Initialize a ProcesssBuilder to run a command using the system shell.
 	 *
 	 * @param cmd
 	 *            command to execute. This string should originate from the
@@ -1125,31 +913,6 @@ public abstract class FS {
 	 *         populating directory, environment, and then start the process.
 	 */
 	public abstract ProcessBuilder runInShell(String cmd, String[] args);
-
-	/**
-	 * Execute a command defined by a {@link ProcessBuilder}.
-	 *
-	 * @param pb
-	 *            The command to be executed
-	 * @param in
-	 *            The standard input stream passed to the process
-	 * @return The result of the executed command
-	 * @throws InterruptedException
-	 * @throws IOException
-	 * @since 4.2
-	 */
-	public ExecutionResult execute(ProcessBuilder pb, InputStream in)
-			throws IOException, InterruptedException {
-		TemporaryBuffer stdout = new TemporaryBuffer.LocalFile(null);
-		TemporaryBuffer stderr = new TemporaryBuffer.Heap(1024, 1024 * 1024);
-		try {
-			int rc = runProcess(pb, stdout, stderr, in);
-			return new ExecutionResult(stdout, stderr, rc);
-		} finally {
-			stdout.close();
-			stderr.close();
-		}
-	}
 
 	private static class Holder<V> {
 		final V value;
@@ -1209,28 +972,28 @@ public abstract class FS {
 			return lastModifiedTime;
 		}
 
-		private final boolean isDirectory;
+		private boolean isDirectory;
 
-		private final boolean isSymbolicLink;
+		private boolean isSymbolicLink;
 
-		private final boolean isRegularFile;
+		private boolean isRegularFile;
 
-		private final long creationTime;
+		private long creationTime;
 
-		private final long lastModifiedTime;
+		private long lastModifiedTime;
 
-		private final boolean isExecutable;
+		private boolean isExecutable;
 
-		private final File file;
+		private File file;
 
-		private final boolean exists;
+		private boolean exists;
 
 		/**
 		 * file length
 		 */
 		protected long length = -1;
 
-		final FS fs;
+		FS fs;
 
 		Attributes(FS fs, File file, boolean exists, boolean isDirectory,
 				boolean isExecutable, boolean isSymbolicLink,
@@ -1249,14 +1012,14 @@ public abstract class FS {
 		}
 
 		/**
-		 * Constructor when there are issues with reading. All attributes except
-		 * given will be set to the default values.
+		 * Constructor when there are issues with reading
 		 *
 		 * @param fs
 		 * @param path
 		 */
 		public Attributes(File path, FS fs) {
-			this(fs, path, false, false, false, false, false, 0L, 0L, 0L);
+			this.file = path;
+			this.fs = fs;
 		}
 
 		/**
@@ -1339,42 +1102,37 @@ public abstract class FS {
 	 * streams.
 	 * </p>
 	 */
-	private static class StreamGobbler implements Runnable {
-		private InputStream in;
+	private static class StreamGobbler implements Callable<Void> {
+		private final BufferedReader reader;
 
-		private OutputStream out;
+		private final BufferedWriter writer;
 
 		public StreamGobbler(InputStream stream, OutputStream output) {
-			this.in = stream;
-			this.out = output;
+			this.reader = new BufferedReader(new InputStreamReader(stream));
+			if (output == null)
+				this.writer = null;
+			else
+				this.writer = new BufferedWriter(new OutputStreamWriter(output));
 		}
 
-		@Override
-		public void run() {
-			try {
-				copy();
-			} catch (IOException e) {
-				// Do nothing on read failure; leave streams open.
-			}
-		}
-
-		void copy() throws IOException {
+		public Void call() throws IOException {
 			boolean writeFailure = false;
-			byte buffer[] = new byte[4096];
-			int readBytes;
-			while ((readBytes = in.read(buffer)) != -1) {
-				// Do not try to write again after a failure, but keep
-				// reading as long as possible to prevent the input stream
-				// from choking.
-				if (!writeFailure && out != null) {
+
+			String line = null;
+			while ((line = reader.readLine()) != null) {
+				// Do not try to write again after a failure, but keep reading
+				// as long as possible to prevent the input stream from choking.
+				if (!writeFailure && writer != null) {
 					try {
-						out.write(buffer, 0, readBytes);
-						out.flush();
+						writer.write(line);
+						writer.newLine();
+						writer.flush();
 					} catch (IOException e) {
 						writeFailure = true;
 					}
 				}
 			}
+			return null;
 		}
 	}
 }
